Templated webpage without icons.

--- a/index.html
+++ b/index.html
@@ -14,12 +14,25 @@
 </head>
 
 <body>
-  Build The Community Your Fans Will Love
-
-  Huddle re-imagines the way we build communities. You have a voice, but so does your audience.
-  Create connections with your users as you engage in genuine discussion.
-
-  Register
+  <header>
+    <img src="/images/logo.svg" alt="huddle">
+  </header>
+  <main>
+    <section class="img-container">
+      <img src="/images/bg-mobile.svg" alt="">
+    </section>
+    <section>
+      <h1>Build The Community Your Fans Will Love</h1>
+      <p>
+        Huddle re-imagines the way we build communities. You have a voice, but so does your audience.
+        Create connections with your users as you engage in genuine discussion.
+      </p>
+      <button>Register</button>
+    </section>
+  </main>
+  <footer>
+    <!-- Icons -->
+  </footer>
 </body>
 
 </html>
