Icons added and image changed.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="styles/styles.css">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
 
-
+  <script src="https://kit.fontawesome.com/c47db16e1a.js" crossorigin="anonymous"></script>
   <title>Frontend Mentor | Huddle landing page with single introductory section</title>
 
 </head>
@@ -19,7 +19,7 @@
   </header>
   <main>
     <section class="img-container">
-      <img src="/images/bg-mobile.svg" alt="">
+      <img src="/images/illustration-mockups.svg" alt="">
     </section>
     <section>
       <h1>Build The Community Your Fans Will Love</h1>
@@ -32,6 +32,15 @@
   </main>
   <footer>
     <!-- Icons -->
+    <div class="icon-btn">
+      <i class="fa fa-facebook-f"></i>
+    </div>
+    <div class="icon-btn">
+      <i class="fa fa-twitter"></i>
+    </div>
+    <div class="icon-btn">
+      <i class="fa fa-instagram"></i>
+    </div>
   </footer>
 </body>
 
